check_errors.txt
   Compiling talib-sys v0.1.0 (C:\Users\konst\development\forex-ai\vendor\talib-sys)
warning: unused imports: `SystemTime` and `UNIX_EPOCH`
 --> crates\forex-core\src\domain\news_filter.rs:1:17
  |
1 | use std::time::{SystemTime, UNIX_EPOCH};
  |                 ^^^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `forex-core` (lib) generated 1 warning (run `cargo fix --lib -p forex-core` to apply 1 suggestion)
    Checking forex-data v0.1.0 (C:\Users\konst\development\forex-ai\crates\forex-data)
    Checking forex-models v0.1.0 (C:\Users\konst\development\forex-ai\crates\forex-models)
    Checking forex-search v0.1.0 (C:\Users\konst\development\forex-ai\crates\forex-search)
    Checking forex-app v0.1.0 (C:\Users\konst\development\forex-ai\crates\forex-app)
crates\forex-app\src\app_services\trading.rs:50:64: error[E0432]: unresolved import `crate::app_state::RiskState`: no `RiskState` in `app_state`
crates\forex-app\src\ui\dashboard.rs:1:33: warning: unused import: `Rect`
crates\forex-app\src\ui\system_status.rs:67:31: error[E0061]: this method takes 2 arguments but 1 argument was supplied
crates\forex-app\src\workspace\viewer.rs:55:27: error[E0599]: no variant or associated item named `Dashboard` found for enum `WorkspaceTab` in the current scope: variant or associated item not found in `WorkspaceTab`
crates\forex-app\src\app_services\trading.rs:467:9: warning: unused variable: `data_root`: help: if this is intentional, prefix it with an underscore: `_data_root`
crates\forex-app\src\app_services\trading.rs:470:9: warning: unused variable: `years`: help: if this is intentional, prefix it with an underscore: `_years`
crates\forex-app\src\app_services\trading.rs:707:9: warning: unused variable: `tx`: help: if this is intentional, prefix it with an underscore: `_tx`
crates\forex-app\src\app_services\trading.rs:1504:45: warning: unused variable: `state`: help: if this is intentional, prefix it with an underscore: `_state`
warning: `forex-app` (bin "forex-app") generated 5 warnings
error: could not compile `forex-app` (bin "forex-app") due to 3 previous errors; 5 warnings emitted
